# tlib

./: .gitignore  Cargo.toml  build.rs
src/: auto_escape.rs  cargo_tools.rs  either.rs  interpolation.rs  iter_split.rs  lib.rs  linear.rs  macros.rs  main.rs  pow.rs  singleton.rs  tuple_tools.rs  vec.rs  vec_zip.rs
src/new_types/: mod.rs  singleton.rs  union.rs
src/tuple_tools/: A2.rs  B2.rs  C2.rs  D2.rs  base1.rs  impl101to150.rs  impl151to200.rs  impl26to50.rs  impl3to25.rs  impl51to100.rs
