[package]
name = "tlib"
version = "0.6.1"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

[dependencies]
either = { version = "1.5.2", optional = true }
cfg-if = { version = "0.1.7", optional = true }

[build-dependencies]
once_cell = "0.2.1"

[features]
default = ["either", "cfg-if", "tuple_tools"]

use_std = []
either_use_std = ["use_std", "either/use_std"]
tuple_tools = []
tuple_tools_a2 = ["tuple_tools"]
tuple_tools_b2 = ["tuple_tools_a2"]
tuple_tools_c2 = ["tuple_tools_b2"]
tuple_tools_d2 = ["tuple_tools_c2"]
tuple_tools_all = ["tuple_tools_d2"]

