[package]
name = "tlib"
version = "0.6.1"
authors = ["T0mstone <realt0mstone@gmail.com>"]
edition = "2018"

[dependencies]
either = { version = "1.5.2", optional = true }
cfg-if = { version = "0.1.7", optional = true }

[features]
default = ["either", "cfg-if"]

use_std = []
either_use_std = ["use_std", "either/use_std"]
tuple_tools = []
tuple_tools_50 = ["tuple_tools"]
tuple_tools_100 = ["tuple_tools_50"]
tuple_tools_150 = ["tuple_tools_100"]
tuple_tools_200 = ["tuple_tools_150"]
tuple_tools_all = ["tuple_tools_200"]

